[package]
name = "kilnfi_connect_rs"
version = "0.1.2"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Neal-C/kilnfi_connect_rs"
license = "BUSL-1.1"
description = "A Rust API Client for the Kiln Connect API"
keywords = ["kiln", "kilnfi", "sdk", "staking"]
categories = ["api-bindings", "web-programming"]
authors = ["Neal-C <knoll-clear-gout@duck.com>"]
repository = "https://github.com/Neal-C/kilnfi_connect_rs.git"
rust-version = "1.84.1"

[dependencies]
ureq = {version = "3.0.3", features = ["json"]}
thiserror = "2.0.11"
## json
serde = { version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
## stuff
uuid = { version = "1.11.0", features = ["v4", "serde"]}
chrono = { version = "0.4.38", features = ["serde"]}
strum_macros = "0.26.4"

[dev-dependencies]
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-test = "0.4.2"