[package]
name = "kilnfi_connect_rs"
version = "0.2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Neal-C/kilnfi_connect_rs"
license = "BUSL-1.1"
description = "A Rust API Client for the Kiln Connect API"
keywords = ["kiln", "kilnfi", "sdk", "staking"]
categories = ["api-bindings", "web-programming"]
authors = ["Neal-C <knoll-clear-gout@duck.com>"]
repository = "https://github.com/Neal-C/kilnfi_connect_rs.git"
rust-version = "1.85.1"

[dependencies]
ureq = {version = "3.0.10", features = ["json"]}
thiserror = "2.0.12"
## json
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
## stuff
uuid = { version = "1.16.0", features = ["v4", "serde"]}
chrono = { version = "0.4.40", features = ["serde"]}
strum = "0.27.1"
strum_macros = "0.27.1"
